[project]
name = "untwistingrope"
description = "A ComfyUI custom node for Untwisting RoPE."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/BigStationW/ComfyUi-Untwisting-RoPE"
Documentation = "https://github.com/BigStationW/ComfyUi-Untwisting-RoPE/wiki"
"Bug Tracker" = "https://github.com/BigStationW/ComfyUi-Untwisting-RoPE/issues"

[tool.comfy]
PublisherId = "bigstationw"
DisplayName = "ComfyUi-Untwisting-RoPE"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"
